--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800&display=swap");
 
+html {
+  background-color: black;
+}
+
+.container-utama {
+  background: linear-gradient(180deg, #4e37d0, black);
+}
+
 .kepala {
   background-image: url(fotobersama2.jpg);
   background-image: cover;
@@ -10,15 +18,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.class {
-  background-color: black;
-}
-
-.class h2 {
-  color: white;
-  background-color: black;
 }
 
 .logo {
@@ -35,19 +34,19 @@
   text-shadow: 1px 1px 10px white;
 }
 
-.mata2 {
-  color: white;
-  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
+.container-galery {
+  background: rgb(157, 8, 194);
+  background: radial-gradient(
+    farthest-corner at center left,
+    #4e37d0 5%,
+    rgba(0, 0, 0, 1) 50%
+  );
+  padding-bottom: 120px;
 }
-
-.class {
-  background-color: black;
-  margin: 0;
-}
-
-.class h2 {
+.container-galery h2 {
   color: white;
-  margin: 0;
+  padding-top: 30px;
+  text-align: center;
 }
 
 .carousel-inner img {
@@ -55,14 +54,25 @@
   height: 70vh;
   margin: auto;
   display: flex;
+  padding-top: 30px;
 }
-
+.chat-message {
+  margin-left: 20px;
+}
 /* Styling for the structure */
 .strukturjadwal {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin: auto;
+  padding-bottom: 170px;
+  background: rgb(157, 8, 194);
+  background: radial-gradient(
+    farthest-corner at center right,
+    #4e37d0 5%,
+    rgba(0, 0, 0, 1) 50%
+  );
 }
 
 .column {
@@ -103,10 +113,6 @@ button {
   cursor: pointer;
 }
 
-.strukturjadwal {
-  margin: auto;
-}
-
 #structure-btn {
   color: white;
   font-size: 30px;
@@ -132,8 +138,9 @@ button {
 }
 
 #display-area {
-  font-size: 15px;
+  font-size: 20px;
   margin-top: 30px;
+  text-shadow: 1px 1px 9px white;
 }
 
 ul {
@@ -145,14 +152,15 @@ button:focus {
 }
 
 .chat-container {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 70%;
   height: 400px;
   border-radius: 30px;
-  background-color: #333;
+  background-color: #1a1a1a;
 }
 
 #chat-box {
@@ -175,6 +183,7 @@ button:focus {
   align-items: center;
   padding: 15px;
   border-radius: 0 0 15px 15px;
+  width: 95%;
 }
 button {
   background-color: transparent;
@@ -240,7 +249,7 @@ footer h3 {
   margin-left: 80px;
   height: 200px;
   float: left;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 span .mediasosial {
@@ -264,13 +273,17 @@ span .mediasosial {
   text-decoration: underline;
 }
 
+#message-input {
+  width: 100%;
+}
+
 footer {
   margin: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #1a1a1a, #3b0a45);
+  background: linear-gradient(to bottom, #000, #4e37d0);
   font-family: Arial, sans-serif;
   color: white;
 }
@@ -289,14 +302,11 @@ footer {
 .rating p {
   font-size: 1.2em;
   font-weight: bold;
-  margin-left: 160px;
+  margin-left: 180px;
 }
 .face {
   font-size: 2em;
   margin-bottom: 20px;
-  position: absolute;
-  right: 185px;
-  top: 2350px;
 }
 .slider-container {
   position: absolute;
@@ -333,6 +343,32 @@ footer {
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 
-input {
-  float: left;
+@media (max-width: 576px) {
+  .gambarfooter {
+    position: absolute;
+    top: 2160px;
+  }
+  .created {
+    position: absolute;
+    right: 140px;
+    top: 2160px;
+  }
+  .mediasosal {
+    position: absolute;
+    top: 2160px;
+    right: 60px;
+  }
+  .container-ratting {
+    margin-top: 20px;
+  }
+  .value {
+    position: absolute;
+    top: 0px;
+    right: 300px;
+  }
+  .container-ratting .face {
+    position: absolute;
+    top: 0;
+    left: 70px;
+  }
 }
